# mod-sweep

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  modsweep.example.toml  modsweep.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: MAINTAINING.md  gui.md  nexus-description.bbcode  nexus-description.md  usage.md
packaging/: cli_entry.py  gui_entry.py  make_screenshots.py  modsweep.spec
src/modsweep/: __init__.py  bundled.py  cache.py  cli.py  config.py  gui.py  hashutil.py  manifest.py  manifest_cache.py  matcher.py  mo2.py  nolvus.py  remote.py  report.py  scanner.py  snapshot.py  state.py  sweep.py  wabbajack.py
src/modsweep/gui/: __init__.py  editor.py  icons.py  texts.py  window.py  workers.py
tests/: conftest.py  helpers.py  test_bundled.py  test_cache.py  test_cli.py  test_config.py  test_e2e.py  test_gui.py  test_hashutil.py  test_latest.py  test_live_remote.py  test_manifest_cache.py  test_matcher.py  test_mo2.py  test_nolvus.py  test_properties.py  test_remote.py  test_report.py  test_scanner.py  test_snapshot.py  test_state.py  test_sweep.py  test_wabbajack.py
