[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "modsweep"
version = "0.1.0"
description = "Whitelist-driven cleanup for shared Skyrim modlist archive directories (Wabbajack + Nolvus)"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Zach Patterson" }]
requires-python = ">=3.12"
dependencies = ["xxhash>=3.4"]

[project.scripts]
modsweep = "modsweep.cli:main"
modsweep-gui = "modsweep.gui:main"

[project.optional-dependencies]
gui = [
    "pyside6>=6.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
modsweep = ["data/nolvus/*.xml", "data/nolvus/*.xml.gz"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
