[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "modsweep"
version = "0.2.2"
description = "Whitelist-driven cleanup for shared Skyrim modlist archive directories (Wabbajack + Nolvus)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "null device" }]
keywords = ["skyrim", "wabbajack", "nolvus", "modlist", "mod-organizer-2", "cleanup"]
requires-python = ">=3.12"
dependencies = ["xxhash>=3.4"]

[project.urls]
Repository = "https://github.com/zspatter/mod-sweep"
Releases = "https://github.com/zspatter/mod-sweep/releases"
Issues = "https://github.com/zspatter/mod-sweep/issues"

[project.scripts]
modsweep = "modsweep.cli:main"
modsweep-gui = "modsweep.gui:main"

[project.optional-dependencies]
gui = [
    "pyside6>=6.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
modsweep = ["py.typed", "data/nolvus/*.xml", "data/nolvus/*.xml.gz"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pyright>=1.1.390",
    "hypothesis>=6.156.1",
]
release = [
    "pyinstaller>=6.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests", "packaging"]
exclude = ["**/__pycache__"]
extraPaths = ["tests"]  # tests import the shared helpers module directly
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

[[tool.pyright.executionEnvironments]]
# Tests assert on Qt getters that type as Optional and monkeypatch class
# attributes wholesale; a wrong assumption fails the test at runtime anyway.
root = "tests"
reportOptionalMemberAccess = "none"
reportAttributeAccessIssue = "none"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-specific
]
